--- a/roles/awx/templates/tower.yaml.j2
+++ b/roles/awx/templates/tower.yaml.j2
@@ -248,6 +248,8 @@ kind: Service
 metadata:
   name: '{{ meta.name }}'
   namespace: '{{ meta.namespace }}'
+  labels:
+    app: awx
 spec:
   type: NodePort
   ports:
